[package]
name = "fd-rust"
version = "0.1.0"
description = "A Rust implementation of fd toolkit"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.4"
hyper = "0.12"
futures = "0.1"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
